--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="display-box"></div>
     </div>
 
+    <script type='text/javascript' src='config.js'></script>
     <script src="index.js"></script>
 </body>
 </html>
